--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.mongodb:mongodb-driver-sync:4.0.0-beta1'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
 }
 
